[package]
name = "bevy_webxr"
version = "0.8.0"
edition = "2021"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "OpenXR presentation and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.8.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.8.0-dev" }
bevy_log = { path = "../bevy_log", version = "0.8.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.8.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.8.0-dev" }
bevy_xr = { path = "../bevy_xr", version = "0.8.0-dev" }
bevy_render = { path = "../bevy_render", version = "0.8.0-dev" }
console_error_panic_hook = "0.1.7"
gloo-utils = "0.1.5"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wgpu = {version = "0.13.1",features = ["webgl"]}
raw-window-handle = "0.4.2"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "WebGl2RenderingContext",
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "DomPointReadOnly",
    "DomPointInit",
    "XrBoundedReferenceSpace",
    "XrEye",
    "XrFrame",
    "XrHand",
    "XrHandedness",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrInputSourceEventInit",
    "XrInputSourcesChangeEvent",
    "XrInputSourcesChangeEventInit",
    "XrJointPose",
    "XrJointSpace",
    "XrPose",
    "XrReferenceSpace",
    "XrBoundedReferenceSpace",
    "XrReferenceSpaceEvent",
    "XrReferenceSpaceEventInit",
    "XrReferenceSpaceType",
    "XrRenderState",
    "XrRenderStateInit",
    "XrRigidTransform",
    "XrSession",
    "XrSessionEvent",
    "XrSessionEventInit",
    "XrSessionInit",
    "XrSessionMode",
    "XrSpace",
    "XrSystem",
    "XrTargetRayMode",
    "XrView",
    "XrViewerPose",
    "XrViewport",
    "XrVisibilityState",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
]

